fixed some  errors

--- a/views/admin/coupon.hbs
+++ b/views/admin/coupon.hbs
@@ -43,7 +43,7 @@
             <td>{{this.usageCount}}</td>
             <td>{{this.minPriceRange}}</td>
             <td>{{this.maxPriceRange}}</td>
-            <td>{{this.expireDate}}</td>
+            <td>{{date this.expireDate "MMMM Do, YYYY"}}</td>
             <td>
               <div class="d-flex justify-content-start">
               <a class="btn btn-sm btn-primary" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#editCouponModal"
