--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -72,7 +72,7 @@
       </div>
     </td>
     <td>{{this.category}}</td>
-    <td>{{this.createdAt}}</td>
+    <td>{{date this.createdAt "MMMM Do, YYYY"}}</td>
     <td>{{this.price}}</td>
     <td>
       {{#if this.isActive}}
