--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -12,35 +12,39 @@
                             <thead>
                                 <tr class="text-dark">
                                     <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Invoice</th>
-                                    <th scope="col">Customer</th>
+                                    <th scope="col">Order id</th>
+                                    <th scope="col">Products</th>
+                                    <th scope="col">Address</th>
                                     <th scope="col">Amount</th>
+                                    <th scope="col">Date</th>
                                     <th scope="col">Status</th>
-                                    <th scope="col">Action</th>
                                     <th scope="col">Action</th>
                                 </tr>
                             </thead>
                             <tbody>
+                              {{#each orders}}
                                 <tr>
                                     <td><input class="form-check-input" type="checkbox"></td>
                                     <td>
+                                      {{#each this.items}}
                                         <div class="d-flex align-items-center">
-                                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTBPRpTOwz9pwRI9H0J3fX_ApAif3vcGQ90w&s" alt="" style="width: 2rem;" class=" rounded-3">
+                                            <img src="/uploads/{{this.product.image.[0]}} " alt="" style="width: 2rem;" class=" rounded-3">
                                             <div class="ms-3">
                                                 <h6 class="mb-0">
-                                                    Women Shoes
+                                                    {{this.orderId}}
                                                 </h6>
                                             </div>
                                         </div>
                                     </td>
-                                    <td>01 Jan 2045</td>
-                                    <td>INV-0123</td>
-                                    <td>Jhon Doe</td>
-                                    <td>$123</td>
-                                    <td>Paid</td>
+                                    <td>{{this.product.name}}</td>
+                                    {{/each}}
+                                    <td>{{this.address}} </td>
+                                    <td>{{this.finalAmount}}</td>
+                                    <td>{{this.datePlaced}} </td>
+                                    <td></td>
                                     <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
                                 </tr>
+                                {{/each}}
                             </tbody>
                         </table>
                     </div>
