--- a/views/partials/adminSidebar.hbs
+++ b/views/partials/adminSidebar.hbs
@@ -29,7 +29,7 @@
 
                     <a href="/admin/product" class="nav-item nav-link  {{#if (eq activePage 'product')}}active{{/if}}"><i class="fa fa-th me-2"></i>products</a>
                     <a href="/admin/allUsers" class="nav-item nav-link   {{#if (eq activePage 'allUsers')}}active{{/if}}"><i class="fa fa-users me-2"></i>users</a>
-                    <a href="/admin/coupon" class="nav-item nav-link   {{#if (eq activePage 'chart')}}active{{/if}}"><i class="fa fa-chart-bar me-2"></i>coupons</a>
+                    <a href="/admin/coupon" class="nav-item nav-link   {{#if (eq activePage 'coupon')}}active{{/if}}"><i class="fa fa-chart-bar me-2"></i>coupons</a>
                     <a href="/admin/orders" class="nav-item nav-link   {{#if (eq activePage 'orders')}}active{{/if}}"><i class="fa fa-shopping-cart me-2"></i>orders</a>
                     <a href="form.html" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Forms</a>
                     <a href="table.html" class="nav-item nav-link"><i class="fa fa-table me-2"></i>Tables</a>
