--- a/views/admin/1gpt.hbs
+++ b/views/admin/1gpt.hbs
@@ -216,3 +216,45 @@
     });
   });
 </script>
+
+
+{{!-- below from orders --}}
+{{!-- 
+                        <table class="table text-start align-middle table-bordered table-hover mb-0"></table>
+                            <thead>
+                                <tr class="text-dark">
+                                    <th scope="col"><input class="form-check-input" type="checkbox"></th>
+                                    <th scope="col">Order id</th>
+                                    <th scope="col">Products</th>
+                                    <th scope="col">Address</th>
+                                    <th scope="col">Amount</th>
+                                    <th scope="col">Date</th>
+                                    <th scope="col">Status</th>
+                                    <th scope="col">Action</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                              {{#each orders}}
+                                <tr>
+                                    <td><input class="form-check-input" type="checkbox"></td>
+                                    <td>
+                                        <div class="d-flex align-items-center">
+                                            <img src="/uploads/{{#each this.items}}{{this.product.image.[0]}} {{/each}}" alt="" style="width: 2rem;" class=" rounded-3">
+                                            <div class="ms-3">
+                                                <h6 class="mb-0">
+                                                    {{this.orderId}}
+                                                </h6>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td>{{#each this.items}}{{this.product.name}} {{/each}}</td>
+                                    <td>INV-0123</td>
+                                    <td>Jhon Doe</td>
+                                    <td>$123</td>
+                                    <td>Paid</td>
+                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+                                </tr>
+                                {{/each}}
+                            </tbody>
+                        </table>
+ --}}
