--- a/views/admin/orders.hbs
+++ b/views/admin/orders.hbs
@@ -8,45 +8,59 @@
                         <a href="">Show All</a>
                     </div>
                     <div class="table-responsive">
-                        <table class="table text-start align-middle table-bordered table-hover mb-0">
-                            <thead>
-                                <tr class="text-dark">
-                                    <th scope="col"><input class="form-check-input" type="checkbox"></th>
-                                    <th scope="col">Order id</th>
-                                    <th scope="col">Products</th>
-                                    <th scope="col">Address</th>
-                                    <th scope="col">Amount</th>
-                                    <th scope="col">Date</th>
-                                    <th scope="col">Status</th>
-                                    <th scope="col">Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                              {{#each orders}}
-                                <tr>
-                                    <td><input class="form-check-input" type="checkbox"></td>
-                                    <td>
-                                      {{#each this.items}}
-                                        <div class="d-flex align-items-center">
-                                            <img src="/uploads/{{this.product.image.[0]}} " alt="" style="width: 2rem;" class=" rounded-3">
-                                            <div class="ms-3">
-                                                <h6 class="mb-0">
-                                                    {{this.orderId}}
-                                                </h6>
-                                            </div>
-                                        </div>
-                                    </td>
-                                    <td>{{this.product.name}}</td>
-                                    {{/each}}
-                                    <td>{{this.address}} </td>
-                                    <td>{{this.finalAmount}}</td>
-                                    <td>{{this.datePlaced}} </td>
-                                    <td></td>
-                                    <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
-                                </tr>
-                                {{/each}}
-                            </tbody>
-                        </table>
+<table class="table text-start align-middle table-bordered table-hover mb-0">
+  <thead>
+    <tr class="text-dark">
+      <th scope="col"><input class="form-check-input" type="checkbox"></th>
+      <th scope="col">Order id</th>
+      <th scope="col">Products</th>
+      <th scope="col">Address</th>
+      <th scope="col">Amount</th>
+      <th scope="col">Date</th>
+      <th scope="col">Status</th>
+      <th scope="col">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    {{#each orders}}
+      <tr>
+        <td><input class="form-check-input" type="checkbox"></td>
+
+        <!-- Display the order ID here, outside of the items loop -->
+        <td>{{this.orderId}}</td> 
+
+        <!-- Loop through each item and display product info -->
+        <td>
+          {{#each this.items}}
+            <div class="d-flex align-items-center">
+              <img src="/uploads/{{this.product.image.[0]}}" alt="" style="width: 2rem;" class="rounded-3">
+              <div class="ms-3">
+                <h6 class="mb-0">{{this.product.name}}</h6> <!-- Product Name -->
+                <p>Qty: {{this.quantity}}</p> <!-- Product Quantity -->
+              </div>
+            </div>
+          {{/each}}
+        </td>
+
+        <!-- Address field (populated) -->
+        <td>{{this.address.streetAddress}}, {{this.address.city}}, {{this.address.country}}</td>
+
+        <!-- Display final amount -->
+        <td>{{this.finalAmount}}</td>
+
+        <!-- Date order placed -->
+        <td>{{date this.datePlaced "MMMM Do, YYYY"}}</td>
+
+        <!-- Order status -->
+        <td>{{this.orderStatus}}</td>
+
+        <!-- Action button -->
+        <td><a class="btn btn-sm btn-primary" href="">Detail</a></td>
+      </tr>
+    {{/each}}
+  </tbody>
+</table>
+
                     </div>
                 </div>
             </div>
